# python-sanic-example

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  alembic_revision.sh  app.py  entrypoint.sh  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0000_init_products.py
api_models/: base.py  product.py
clients/: __init__.py  http_base_client.py
config/: __init__.py  default.py  dev.py
configs/: __init__.py  default.py  local.py
controllers/: __init__.py  product.py
cors/: __init__.py  cors.py
database/: __init__.py  database.py  dberror.py  exceptions.py
database/orm/: __init__.py  base.py  product.py
errors/: errors.py
listeners/: __init__.py  finish.py  init.py  setup_options.py
middlewares/: __init__.py  cors.py  error_handler.py  request.py  request_handler.py  response.py  response_handler.py
models/: __init__.py  product.py
tests/: conftest.py
tests/views/: test_product.py
utils/: logger.py  model_to_schema.py
views/: ping.py  product.py
