[tool.poetry]
name = "python-sanic-example"
version = "1.0.0"
description = "Python sanic apllication example"
authors = ["hisdream86 <hisdream86@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
sanic = "21.9.3"
sanic-openapi = "21.6.1"
pydantic = "1.8.2"
pytz = "2021.3"
tomlkit = "0.7.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.7b0"
pytest = "^6.2.4"
pytest-mock = "^3.6.1"
pytest-asyncio = "^0.16.0"
pytest-aiohttp = "^0.3.0"
pytest-cov = "^3.0.0"
sanic_testing = "^0.7.0"
pytest-postgresql = "^4.0.0"
psycopg = {version = "3.0.4", extras = ["binary"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
